chore: fix the tests